--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
          <h1>laalith </h1>
      <img width="50%"src="laa.jpg">
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/zysSoygHCHg?si=6ruGRn5hwhK_sjXg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  
+  	<img width="50%"src="pic.jpg">
         </body>
 
         </html>
 
 
-.
+
