--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
            Reading
 	 </title>
         </head>
+	<style>
+			h1{color: black;}
+			body{background-image: url("laa.jpg");
+		       	background-image:no-repeat;}
+	</style>
         <body>
      <img width="50%"src="laa.jpg">
 	<h1>
