--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
          <title>
            Reading
 	 </title>
-        </head>
+        
 	<style>
-			h1{color: black;}
-			body{background-image: url("laa.jpg");
-		       	background-image:no-repeat;}
-	</style>
+			
+	body{background-color:black;}
+		</style>
         <body>
      <img width="50%"src="laa.jpg">
 	<h1>
