--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<style>
 			
 	body{background-color:black;}
+		h1{background color:red;}
 		</style>
         <body>
      <img width="50%"src="laa.jpg">
