--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<style>
 			
 	body{background-color:black;}
-		h1{background-color:red;}
+		h1{color:red;}
 		</style>
+	</head>
         <body>
      <img width="50%"src="laa.jpg">
 	<h1>
