--- a/index.html
+++ b/index.html
@@ -2,14 +2,9 @@
 <html>
         <head>
          <title>
-           Reading
+           DOM
 	 </title>
         
-	<style>
-			
-	body{background-color:black;}
-		h1{color:red;}
-		</style>
 	</head>
         <body>
 	<h1<iframe width="560" height="315" src="https://www.youtube.com/embed/9NVeAchS2yo?si=Q6bnJ7dz2xsQH1V6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>></h1>
